<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#EDEDED"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textAlignment="center">

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="120dp"
                android:text="Back" />

            <TextView
                android:id="@+id/compareJobsTitle"
                android:layout_width="183dp"
                android:layout_height="101dp"
                android:gravity="center_horizontal|center_vertical"
                android:outlineAmbientShadowColor="#000000"
                android:text="Compare Jobs"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/compareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="120dp"
                android:text="Compare" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Job ID 1"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/cj_JobID1"
                        android:layout_width="175dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:hint="Enter a Job ID to compare"
                        android:inputType="number"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Job ID 2"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/cj_JobID2"
                        android:layout_width="175dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:hint="Enter a Job ID to compare"
                        android:inputType="number"
                        android:textStyle="italic" />
                </LinearLayout>

                <TableLayout
                    android:id="@+id/TableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/TextView02"
                            android:layout_width="80dp"
                            android:layout_weight="1"
                            android:background="#dcdcdc"
                            android:gravity="center"
                            android:padding="10dip"
                            android:text="Job ID"
                            android:textColor="#000000"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/TextView03"
                            android:layout_width="110dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#d3d3d3"
                            android:gravity="center"
                            android:padding="10dip"
                            android:text="Job Title"
                            android:textColor="#000000"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/TextView04"
                            android:layout_width="110dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#cac9c9"
                            android:gravity="center"
                            android:padding="10dip"
                            android:text="Company"
                            android:textColor="#000000"
                            android:textSize="12sp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/TextView05"
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#cac9c9"
                            android:gravity="center"
                            android:padding="10dip"
                            android:text="Current?"
                            android:textColor="#000000"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </TableRow>
                </TableLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/jobDisplayRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="425dp"
                    android:layout_margin="10dp"
                    android:layout_weight="3" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
