...
                android:text="Compare Jobs"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/compareJobsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|right"
                android:text="Compare" />

        </LinearLayout>
...
